<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bmw_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:translationY="-180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/bmw_welcome_page"/>

    <View
        android:id="@+id/gradiant_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationY="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/gradient_background_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/aref_regular_0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="192dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sharzad_cleaning_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharzad_cleaning_center"
        android:textColor="@color/white"
        android:fontFamily="@font/aref_regular_0"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/sharzad_cleaning_center"
        app:layout_constraintStart_toStartOf="@id/sharzad_cleaning_center"
        app:layout_constraintEnd_toEndOf="@id/sharzad_cleaning_center"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/email_edt"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:layout_marginBottom="16dp"
        android:background="#00ffffff"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password_edt"
        app:layout_constraintEnd_toEndOf="@id/password_edt"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/facebook_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        android:layout_marginTop="16dp"
        android:text="@string/facebook"
        android:onClick="moveToServicePage"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/facebook"
        android:paddingEnd="328dp"
        android:background="@drawable/facebook_btn"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/facebook_btn"
        app:layout_constraintLeft_toLeftOf="@id/facebook_btn"
        app:layout_constraintTop_toTopOf="@id/facebook_btn"
        app:layout_constraintBottom_toBottomOf="@id/facebook_btn"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/google_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/facebook_btn"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        android:layout_marginTop="16dp"
        android:text="@string/facebook"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/google"
        android:paddingEnd="328dp"
        android:background="@drawable/google_btn"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="@id/google_btn"
        app:layout_constraintLeft_toLeftOf="@id/google_btn"
        app:layout_constraintTop_toTopOf="@id/google_btn"
        app:layout_constraintBottom_toBottomOf="@id/google_btn"
        android:textColor="@color/black"/>
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/login_btn"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/google_btn"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        app:layout_constraintTop_toBottomOf="@id/dont_have_account"
        android:layout_marginTop="8dp"
        android:text="@string/create_account"
        android:onClick="moveToRegisterPage"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="#00ffffff"/>



</androidx.constraintlayout.widget.ConstraintLayout>